<resources>
    <string name="app_name">IT_ASSET_MANAGEMENT_App</string>
    <string name="login">Login</string>
    <string name="Password" />
    <string name="email" />
    <string name="Login_to_get_started" />
    <string name="User_Account" />
    <string name="todo">TODO</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="Login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="registered_on">Registered on</string>
    <string name="registration">Registration</string>
    <string name="account_details">Account Details</string>
    <string name="Name">TODO</string>
    <string name="your_account_has_been_created_successfully_you_can_now_sign_in">Your account has been created successfully. You can now sign in.</string>
    <string name="loginapp">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_zenani">Zenani</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="_32">32</string>
    <string name="total_assets">Total Assets</string>
    <string name="_12">12</string>
    <string name="in_use">In Use</string>
    <string name="_5">5</string>
    <string name="pending">Pending</string>
    <string name="_2">2</string>
    <string name="maintenance">Maintanance</string>
    <string name="logout">Logout</string>
    <string name="Welcome">IT Asset Management</string>
    <string name="location">Location</string>
    <string name="add_asset">Add Asset</string>
    <string name="asset_number">Asset Number</string>
    <string name="serial_number_service_tag">Serial Number / Service Tag</string>
    <string name="asset_type">Asset Type</string>
    <string name="condition">Condition</string>
    <string name="save_asset">Save Asset</string>
    <string name="asset_name">Asset Name</string>
    <string name="report">Report</string>
    <string name="Add_Assets">Assets</string>
    <string name="transfer">Transfer</string>
    <string name="add_assets">Add Assets</string>
    <string name="transfere">Transfer</string>
    <string name="department">Department</string>
    <string name="assigned_user">Assigned User</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="transfer_it_asset">Transfer IT Asset</string>
    <string name="asset_information">Asset Information</string>
    <string name="asset_id">Asset ID</string>
    <string name="old_information">Old Information</string>
    <string name="current_user">Current User</string>
    <string name="current_department">Current Department</string>
    <string name="current_location">Current Location</string>
    <string name="new_information">New Information</string>
    <string name="new_user">New User</string>
    <string name="new_department">New Department</string>
    <string name="new_location">New Location</string>
    <string name="transferbutton">TRANSFERButton</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="full_name">Full Name</string>
    <string name="department1">Department</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="report_details_go_here">Report details go here</string>
    <string name="transfers">Transfers</string>
    <string name="assets">Assets</string>
    <string name="AssetName">Asset Name</string>
    <string name="report_timestamp">timestamp</string>
    <string name="add_report">ViewReport</string>
    <string name="allocation_report">Allocation Report</string>
    <string name="assets_by_location">Assets by Location</string>
    <string name="assets_by_category">Assets by Category</string>
    <string name="assets_by_status">Assets by Status</string>
    <string name="all_assets">All Assets</string>
    <string name="select_report_type">Select Report Type</string>
    <string name="btn_Reports">btn_reports</string>
    <string name="reports">Reports</string>
    <string name="asset_reports">Asset Reports</string>
    <string name="generate_reports_from_your_it_asset_records">Generate reports from your IT asset records</string>
    <string name="all_assets_report">All Assets Report</string>
    <string name="view_and_export_all_assets_stored_in_firebase">View and export all assets stored in Firebase</string>
    <string name="asset_status_report">Asset Status Report</string>
    <string name="view_assets_according_to_their_condition_or_status">View assets according to their condition or status</string>
    <string name="asset_category_report">Asset Category Report</string>
    <string name="view_assets_by_type_such_as_laptops_printers_and_desktops">View assets by type such as laptops, printers and desktops</string>
    <string name="asset_location_report">Asset Location Report</string>
    <string name="view_where_assets_are_currently_located">View where assets are currently located</string>
    <string name="view_assets_that_require_maintenance_repair_or_replacement">View assets that require maintenance, repair or replacement</string>
    <string name="export_report">Export Report</string>
    <string name="maintenance_report">Maintenance Report</string>
    <string name="asset_allocation_report">Asset Allocation Report</string>
    <string name="view_assigned_users_departments_and_asset_locations">View assigned users, departments and asset locations</string>
    <string name="know_it_track_it_manage_it">Know It. Track It. Manage It.</string>
    <string name="it_asset_management">IT Asset Management</string>
    <string name="Asset_Name">Asset Name</string>
    <string name="select_asset">Select Asset</string>
    <string name="serial_number">Serial Number</string>
    <string name="current_asset_status">Current Asset Status</string>
    <string name="available">Available</string>
    <string name="allocation_details">Allocation Details</string>
    <string name="employee_assigned_user">Employee / Assigned User</string>
    <string name="allocation_date">Allocation Date</string>
    <string name="allocate_asset">ALLOCATE ASSET</string>
    <string name="asset_number1">Asset Number</string>
    <string name="asset_information1">Asset Information</string>
    <string name="select_Asset">Select Asset</string>
    <string name="department2">Department</string>
    <string name="asset_allocation">Asset Allocation</string>
    <string name="asset_information2">Asset Information</string>
    <string name="select_asset_number2">Select Asset Number</string>
    <string name="asset_name2">Asset Name</string>
    <string name="serial_number2">Serial Number</string>
    <string name="asset_type2">Asset Type</string>
    <string name="employee_details">Employee Details</string>
    <string name="assigned_user2">Assigned User</string>
    <string name="depart">Department</string>
    <string name="allocation_date2">Allocation Date</string>
    <string name="allocate_asset2">Allocate Asset</string>
    <string name="username_label">Username</string>
    <string name="user">User</string>
    <string name="welcome_back1">Welcome Back!</string>
    <string name="login_to_manage_your_it_assets">Login to manage your IT assets</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="or">OR</string>
    <string name="assigned_to">Assigned To</string>
</resources>