<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF7FC"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingTop="45dp"
        android:paddingBottom="30dp">
        <!-- App Logo -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/it_asset_management_logo"/>
        <!-- Main Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Welcome"
            android:textColor="#332E3A"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back1"
        android:textColor="#7450B5"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center" />
        <!-- Subtitle -->
        <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_manage_your_it_assets"
        android:textColor="#77727D"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp" />
        <!-- Email Label -->
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email Address"
        android:textColor="#332E3A"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="7dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"            android:hint="Enter your email address"
            android:inputType="textEmailAddress"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:singleLine="true"
            android:textColor="#332E3A"
            android:textColorHint="#9B969F"
            android:textSize="15sp" />
        <!-- Password label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="#332E3A"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="7dp" />
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:layout_height="55dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="#332E3A"
            android:textColorHint="#9B969F"
            android:textSize="15sp"
            android:singleLine="true"

            />
        <!-- Forgot Password -->
        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/forgot_password"
            android:textColor="#7450B5"
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true"/>
        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#7450B5"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <!-- OR -->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp">
        <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#D6D1D9" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/or"

        android:textColor="#918B95"
        android:textSize="13sp" />

        <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#D6D1D9" />
    </LinearLayout>

        <!-- Register Section -->
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? "
        android:textColor="#77727D"
        android:textSize="14sp" />

        <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="Register"
        android:textColor="#7450B5"
        android:textSize="14sp"
        android:textStyle="bold" />

    </LinearLayout>
    <!-- Tagline -->
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="Know It. Track It. Manage It."
    android:textColor="#4A4550"
    android:textSize="15sp"
    android:textStyle="bold"
    android:gravity="center" />
</LinearLayout>>

</ScrollView>